assets/css/style.css
.container {
    text-align: center;
    background-image: linear-gradient(to right, #004C54, #F74902, #E81828, #006BB6);
    padding: 3%;
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
}

#jumbotron-header {
    text-align: center;
    background-image: url("../images/sportsfigures.jpg");
    padding: 10%;
    font-family: 'Bungee Inline', cursive;
    font-size: 20px;
    border-bottom-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
}

#main-title {
    font-size: 90px;
    background-image: linear-gradient(to right, #004C54, #F74902, #E81828, #006BB6);
    color: rgba(243, 242, 239, 0.938);
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

#main-title-text {
    background-image: linear-gradient(to right, #004C54, #F74902, #E81828, #006BB6);
    color: rgba(243, 242, 239, 0.938);
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

body {
    background-image: url("../images/phillysportsbackground.jpg");
    background-repeat: repeat;
    height: 100%;
}

.thisChoice:hover {
    background-color: #006BB6;
    color: rgba(243, 242, 239, 0.938);
}

.factImage {
    max-width: 300px;
    max-height: 400px;
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
}

#reset-button:hover {
    background-color: #F74902;
}

#start-button:hover {
    background-color: #F74902;

}

#reset-button {
    background-color: #004C54;
    padding: 5%;
    font-family: 'Bungee Inline', cursive;
    padding-left: 25%;
    padding-right: 25%;
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

#start-button {
    background-color: #004C54;
    padding-left: 25%;
    padding-right: 25%;
    font-family: 'Bungee Inline', cursive;
    border-color: rgba(243, 242, 239, 0.938);
    border-style: solid;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

#main-game-section {
    color: rgba(243, 242, 239, 0.938);
    font-family: 'Bebas Neue', cursive;
    font-size: 23px;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

#message {
    font-family: 'Bungee Inline', cursive;
    font-size: 40px;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

.scoreboard {
    font-family: 'Bungee Inline', cursive;
    font-size: 25px;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

